Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <img class="img-fluid d-block w-25" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg">
-        </div>
+          <img class="img-fluid d-block w-25" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg"> </div>
       </div>
       <div class="row">
         <div class="col-md-6"></div>
@@ -27,6 +26,21 @@
               <input type="email" class="form-control" placeholder="Enter email"> </div>
             <button type="submit" class="btn btn-primary">Subscribe</button>
           </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="w-25 py-3 m-0 bg-inverse text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <a><i class="fa fa-fw fa-facebook text-white fa-2x"></i></a>
+        </div>
+        <div class="col-4">
+          <a><i class="fa fa-fw fa-twitter text-white fa-2x"></i></a>
+        </div>
+        <div class="col-4">
+          <a><i class="fa fa-fw fa-instagram text-white fa-2x"></i></a>
         </div>
       </div>
     </div>
